// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputTags > renders with ariaLabel correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" aria-label="Aria label" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with as correctly 1`] = `
"<section dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`InputTags > renders with class correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with default slot correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">Default slot
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with disabled correctly 1`] = `
"<div dir="ltr" data-disabled="" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" disabled="" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with id correctly 1`] = `
"<div dir="ltr" data-slot="root"><input id="id" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with item-delete slot correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with item-text slot correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with leading slot correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input"><span data-slot="leading" class="">Leading slot</span>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with name correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with neutral variant ghost correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with neutral variant none correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with neutral variant outline correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with neutral variant soft correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with neutral variant subtle correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with placeholder correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" placeholder="Search..." data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with pohon correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with primary variant ghost correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with primary variant none correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with primary variant outline correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with primary variant soft correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with primary variant subtle correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with required correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with size lg correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with size md correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with size sm correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with size xl correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with size xs correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`InputTags > renders with trailing slot correctly 1`] = `
"<div dir="ltr" data-slot="root"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if--><span data-slot="trailing" class="">Trailing slot</span>
  <!--v-if-->
</div>"
`;
